[tool.poetry]
name = "time-tracker-api"
version = "0.1.0"
description = "Habit tracking API"
authors = ["Amber Williams <ambercwilliams91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
anyio = "3.3.4"
asgiref = "3.4.1"
attrs = "21.2.0"
bcrypt = "3.2.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.7"
click = "8.0.3"
cryptography = "35.0.0"
ecdsa = "0.17.0"
fastapi = "0.70.0"
greenlet = "1.1.2"
h11 = "0.12.0"
httptools = "0.2.0"
idna = "3.3"
iniconfig = "1.1.1"
packaging = "21.0"
passlib = "1.7.4"
pluggy = "1.0.0"
py = "1.10.0"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.8.2"
pyparsing = "3.0.0"
pytest = "6.2.5"
python-dotenv = "0.19.1"
python-jose = "3.3.0"
python-multipart = "0.0.5"
PyYAML = "6.0"
requests = "2.26.0"
rsa = "4.7.2"
six = "1.16.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.26"
SQLAlchemy-Utils = "0.37.9"
starlette = "0.16.0"
toml = "0.10.2"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.7"
uvicorn = "0.15.0"
uvloop = "0.16.0"
watchgod = "0.7"
websockets = "10.0"
python-dateutil = "2.8.2"
mangum = "0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
